--- a/site/_layouts/error.html
+++ b/site/_layouts/error.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>{{page.title}} | SenDit</title>
+    <title>{{page.title}} | Sendit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="SenDit is a email marketing tool which ensure the business growth" />
+      content="Sendit is a email marketing tool which ensure the business growth" />
     <link href="/vendor/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
