--- a/component-library/components/contact/form/form.jekyll.html
+++ b/component-library/components/contact/form/form.jekyll.html
@@ -89,7 +89,7 @@
             <div class="col-12">
               <button type="submit" class="btn btn-primary btn-lg mt-7">
                 <span class="position-relative"
-                  >{{include.form.submit_btn.text}}</span
+                  >{{include.form.submit_button.text}}</span
                 >
               </button>
             </div>
