--- a/component-library/components/global/error/error.jekyll.html
+++ b/component-library/components/global/error/error.jekyll.html
@@ -8,7 +8,7 @@
               <img src="/images/logo.svg" alt="" class="" />
             </a>
           </div>
-          <img src="{{include.image_path}}" alt="error-image" />
+          <img src="{{include.image}}" alt="{{include.image_alt}}" />
           <h3 class="my-5">{{include.description | markdownify}}</h3>
           <a href="/" class="btn btn-lg btn-primary"> Try Again </a>
         </div>
