--- a/component-library/components/global/signup/signup.jekyll.html
+++ b/component-library/components/global/signup/signup.jekyll.html
@@ -124,8 +124,8 @@
             </div>
             <div class="divider mt-9"></div>
             <div class="col-md-12">
-              <a href="{{include.form.login_btn.link}}" class="create-account">
-                {{include.form.login_btn.text}}
+              <a href="{{include.form.login_button.link}}" class="create-account">
+                {{include.form.login_button.text}}
               </a>
             </div>
           </form>
