--- a/component-library/components/global/testimonial/testimonial.jekyll.html
+++ b/component-library/components/global/testimonial/testimonial.jekyll.html
@@ -15,8 +15,8 @@
           <div class="testimonial-item-person">
             <div class="thumb">
               <img
-                src="{{item.image_path}}"
-                alt="logo"
+                src="{{item.image}}"
+                alt="{{item.image_alt}}"
                 class="img-fluid"
                 loading="lazy" />
             </div>
