--- a/component-library/components/home/hero/hero.jekyll.html
+++ b/component-library/components/home/hero/hero.jekyll.html
@@ -17,7 +17,7 @@
       </div>
       <div class="col-lg-6">
         <div class="hero-two-banner">
-          <img src="{{include.image_path}}" alt="hero-two-images" />
+          <img src="{{include.image}}" alt="{{include.image_alt}}" />
           <div class="hero-two-banner-shape">
             <img src="/images/hero/hero-three-shape.png" alt="shape" />
           </div>
