--- a/component-library/components/home/video/video.jekyll.html
+++ b/component-library/components/home/video/video.jekyll.html
@@ -5,9 +5,9 @@
         <div class="banner">
           <img
             style="border-radius: 20px"
-            src="{{include.image_path}}"
+            src="{{include.image}}"
             class="w-100"
-            alt="banner-image"
+            alt="{{include.image_alt}}"
             loading="lazy" />
           <div class="effect-one">
             <img
