--- a/site/_layouts/taxonomy.html
+++ b/site/_layouts/taxonomy.html
@@ -22,8 +22,8 @@
             <div class="blog-post-thumb">
               <a href="{{ blog.url }}">
                 <img
-                  src="{{ blog.thumb_img.image_path }}"
-                  alt="blog-thumb"
+                  src="{{ blog.thumb_img.image }}"
+                  alt="{{ blog.thumb_img.image_alt }}"
                   loading="lazy" />
               </a>
             </div>
