--- a/component-library/components/about/team/team.jekyll.html
+++ b/component-library/components/about/team/team.jekyll.html
@@ -13,8 +13,8 @@
         <div class="team-member">
           <div class="team-member-thumb">
             <img
-              src="{{item.image_path}}"
-              alt="team-member-1 png"
+              src="{{item.image}}"
+              alt="{{item.image_alt}}"
               loading="lazy"
               style="border-radius: 20px" />
           </div>
