--- a/component-library/components/global/login/login.jekyll.html
+++ b/component-library/components/global/login/login.jekyll.html
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="col-md-12">
-              <button type="submit" class="btn btn-submit  w-100">{{include.signin_btn.text}}</button>
+              <button type="submit" class="btn btn-submit  w-100">{{include.signin_button.text}}</button>
             </div>
             <div class="col-md-12 mt-3">
               <label for="" class="d-block text-center mb-0">or</label>
@@ -74,7 +74,7 @@
             </div>
             <div class="divider mt-9"></div>
             <div class="col-md-12">
-              <a href="{{include.signup_btn.link}}" class="create-account">{{include.signup_btn.text}}</a>
+              <a href="{{include.signup_btn.link}}" class="create-account">{{include.signup_button.text}}</a>
             </div>
         </div>
         </form>
