--- a/site/_layouts/blog-single.html
+++ b/site/_layouts/blog-single.html
@@ -26,9 +26,9 @@
               </div>
             </div>
             <img
-              src="{{ page.featured_img.image_path }}"
+              src="{{ page.featured_img.image }}"
               class="w-100 mb-xxl-11 mb-8"
-              alt="featured-image" />
+              alt="{{page.featured_img.image_alt}}" />
             <div style="max-width: 900px; margin: 0 auto">{{ content }}</div>
           </article>
         </div>
@@ -50,7 +50,7 @@
           <article class="blog-post">
             <div class="blog-post-thumb">
               <a href="{{ blog.url }}">
-                <img src="{{ blog.thumb_img.image_path }}" alt="blog-thumb" />
+                <img src="{{ blog.thumb_img.image }}" alt="{{ blog.thumb_img.image_alt }}" />
               </a>
             </div>
             <div class="blog-post-content">
