--- a/component-library/components/global/header/header.jekyll.html
+++ b/component-library/components/global/header/header.jekyll.html
@@ -6,7 +6,7 @@
           class="section-header @@disply"
           {%
           if
-          no_top_pad
+          remove_top_padding
           %}style="padding-top:0;"
           {%
           endif
