--- a/site/_includes/tail.html
+++ b/site/_includes/tail.html
@@ -5,11 +5,11 @@
          <div class="row">
             <div class="col-12 col-lg-4 me-auto order-2 order-lg-1">
                <div class="footer-logo mt-7 mt-md-0">
-                  <a href="{{ site.data.footer.logo_url }}" class="">
+                  <a href="/" class="">
                      <img src="{{ site.data.footer.logo }}" alt="logo" />
                   </a>
                   <p class="">
-                     Copyright {{ 'now' | date: "%Y" }}{{ site.data.footer.copyRight }}
+                     Copyright {{ 'now' | date: "%Y" }}{{ site.data.footer.copyright }}
                   </p>
                </div>
                <div class="social-icon">
