--- a/component-library/components/global/faq/faq.jekyll.html
+++ b/component-library/components/global/faq/faq.jekyll.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="accordion" id="accordionExample">
-          {% for item in include.faq %} {% if forloop.index == 1 %}
+          {% for item in include.FAQ %} {% if forloop.index == 1 %}
           <div class="accordion-item shows">
             <span>0{{forloop.index}}</span>
             <h2 class="accordion-header" id="headingOne">
