--- a/component-library/components/contact/form/form.jekyll.html
+++ b/component-library/components/contact/form/form.jekyll.html
@@ -12,8 +12,8 @@
                 >{{include.phone.cell}}
                 <span>
                   <img
-                    src="/images/contact/call-add.svg"
-                    alt="call-add"
+                    src="{{ include.phone.image }}"
+                    alt="{{ include.phone.image_alt }}"
                     loading="lazy" />
                 </span>
               </a>
@@ -24,8 +24,8 @@
                 >{{include.email.email}}
                 <span>
                   <img
-                    src="/images/contact/directbox-send.svg"
-                    alt="send-box"
+                    src="{{ include.email.image }}"
+                    alt="{{ include.email.image_alt }}"
                     loading="lazy" />
                 </span>
               </a>
