--- a/component-library/components/global/login/login.jekyll.html
+++ b/component-library/components/global/login/login.jekyll.html
@@ -36,7 +36,7 @@
             <div class="col-md-12 mt-3">
               <label for="" class="d-block text-center mb-0">or</label>
             </div>
-            <div class="col-md-6 mt-3">
+            <div class="button-group">
               <button type="submit" class="btn btn-submit btn-social w-100">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -62,8 +62,6 @@
                     fill="white" />
                 </svg>
                 Sign In with Google</button>
-            </div>
-            <div class="col-md-6 mt-3">
               <button type="submit" class="btn btn-submit btn-social w-100">
                 <svg width="20" height="20" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
