--- a/component-library/components/home/hero/hero.scss
+++ b/component-library/components/home/hero/hero.scss
@@ -23,6 +23,7 @@
     z-index: -1;
   }
   &-content {
+    margin-top: 3rem;
     padding-left: $base-padding * 18;
     @include media-breakpoint-down-xxxl {
       padding-left: $base-padding * 9;
@@ -64,7 +65,6 @@
     text-align: right;
     max-width: 100%;
     margin-right: -13px;
-    z-index: 1;
     img {
       border-radius: 0px;
     }
