--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -74,8 +74,9 @@
       <link rel="stylesheet" href="/css/theme.css" />
 
       {%- comment -%} Favicon {%- endcomment -%}
-      <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-      <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
+      <link rel="shortcut icon" href="{{ site.data.site.favicon_icon }}" type="image/x-icon" />
+      <link rel="icon" href="{{ site.data.site.favicon_image }}" type="image/x-icon" />
+      <link rel="apple-touch-icon" href="{{ site.data.site.favicon_image }}">
    </head>
    <body>
       <header>
