--- a/component-library/components/global/counter/counter.scss
+++ b/component-library/components/global/counter/counter.scss
@@ -66,6 +66,12 @@
       }
     }
 
+     &:nth-child(4) {
+         .counter-up-content-item {
+            border-right: 0;
+         }
+      }
+
     &-item {
       border-top: 1px solid $color-primary-light;
       border-right: 1px solid $color-primary-light;
