--- a/component-library/components/global/faq/faq.jekyll.html
+++ b/component-library/components/global/faq/faq.jekyll.html
@@ -1,3 +1,11 @@
+<script>
+   function onClick (element) {
+    const accordionItem = element.closest('.accordion-item')
+    var current = document.getElementsByClassName('shows');
+    current[0].className = current[0].className.replace(' shows', '');
+    accordionItem.className += ' shows';
+  }
+</script>
 <section class="faq-two">
   <div class="container">
     <div class="row">
@@ -22,7 +30,7 @@
                 data-bs-target="#collapseOne"
                 aria-expanded="true"
                 aria-controls="collapseOne"
-                onclick="accordionBorder()">
+                onclick="onClick(this)">
                 <p class="header-content">{{item.title}}</p>
               </button>
             </h2>
@@ -46,7 +54,8 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapse{{forloop.index}}"
                 aria-expanded="false"
-                aria-controls="collapse{{forloop.index}}">
+                aria-controls="collapse{{forloop.index}}"
+                onclick="onClick(this)">
                 <p class="header-content">{{item.title}}</p>
               </button>
             </h2>
