--- a/component-library/components/global/signup/signup.jekyll.html
+++ b/component-library/components/global/signup/signup.jekyll.html
@@ -72,7 +72,7 @@
             <div class="col-md-12 mt-3">
               <label for="" class="d-block text-center mb-0">or</label>
             </div>
-            <div class="col-md-6 mt-3">
+            <div class="button-group">
               <button type="submit" class="btn btn-submit btn-social w-100">
                 <svg
                   width="20"
@@ -104,8 +104,6 @@
                 </svg>
                 Sign In with Google
               </button>
-            </div>
-            <div class="col-md-6 mt-3">
               <button type="submit" class="btn btn-submit btn-social w-100">
                 <svg
                   width="20"
