--- a/component-library/components/home/hero/hero.jekyll.html
+++ b/component-library/components/home/hero/hero.jekyll.html
@@ -9,8 +9,8 @@
           <h1 class="mb-4">{{include.title}}</h1>
           <div class="mb-7 w-xxl-80">{{include.description | markdownify}}</div>
           <div class="">
-            <a href="{{include.link.url}}" class="btn btn-primary btn-lg">
-              {{include.link.text}}
+            <a href="{{include.button.url}}" class="btn btn-primary btn-lg">
+              {{include.button.text}}
             </a>
           </div>
         </div>
