--- a/site/_includes/tail.html
+++ b/site/_includes/tail.html
@@ -16,7 +16,7 @@
                   <ul class="list-unstyled">
                      {% for item in site.data.footer.social %}
                      <li>
-                        <a href="{{ item.link }}"> <i class="{{ item.social_icon }}"></i></a>
+                        <a href="{{ item.link }}"> <i class="{{ item.icon }}" aria-hidden="true"></i><span class="visually-hidden">{{ item.icon_alt }}</span></a>
                      </li>
                      {% endfor %}
                   </ul>
