--- a/component-library/components/contact/form/form.scss
+++ b/component-library/components/contact/form/form.scss
@@ -104,13 +104,19 @@
       }
     }
     .effect {
+      -webkit-mask-image: url(/images/contact/effects.png);
+      mask-image: url(/images/contact/effects.png);
+      background: $color-background-effects;
       position: absolute;
       top: -10%;
       left: -14%;
       z-index: -1;
-      img {
-        max-width: 100%;
-      }
+      mask-repeat: no-repeat;
+      -webkit-mask-repeat: no-repeat;
+      mask-size: contain;
+      -webkit-mask-size: contain;
+      width: 115%;
+      height: 100%;
     }
   }
 }
