--- a/component-library/components/home/hero/hero.scss
+++ b/component-library/components/home/hero/hero.scss
@@ -17,10 +17,15 @@
     padding: $base-padding * 5.5 0 $base-padding * 5;
   }
   &-shape {
+    -webkit-mask-image: url(/images/hero/hero-two-shape.png);
+    mask-image: url(/images/hero/hero-two-shape.png);
+    background: $color-background-effects;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
+    width: 384px;
+    height: 671px;
   }
   &-content {
     margin-top: 3rem;
@@ -65,17 +70,32 @@
     text-align: right;
     max-width: 100%;
     margin-right: -13px;
+    padding-right: $base-padding * 18;
+    @include media-breakpoint-down-xxxl {
+      padding-right: initial;
+    }
     img {
       border-radius: 0px;
     }
     &-shape {
+      -webkit-mask-image: url(/images/hero/hero-three-shape.png);
+      mask-image: url(/images/hero/hero-three-shape.png);
+      background: $color-background-effects;
+      width: 904px;
+      height: 1016px;
       position: absolute;
       top: -26%;
-      left: 3%;
+      right: 18rem;
       z-index: -1;
+      @media screen and (max-width: 2055px){
+        right: -3%;
+      }
+      @include media-breakpoint-down-xxl {
+        right: -3%;
+      }
       @include media-breakpoint-down-lg {
         top: -27%;
-        left: -22%;
+        left: 7%;
       }
     }
   }
