--- a/component-library/components/pricing/table/table.jekyll.html
+++ b/component-library/components/pricing/table/table.jekyll.html
@@ -19,21 +19,13 @@
                   loading="lazy" />
               </div>
             </div>
-            <div class="shape top-0">
-              <img
-                src="/images/pricing/shape-two.png"
-                alt="shape"
-                loading="lazy" />
+            <div class="shape-two top-0">
             </div>
           </div>
           {% else %}
           <div class="price">
             <p><span>{{item.currency_symbol}}{{item.price}}</span></p>
-            <div class="shape">
-              <img
-                src="/images/pricing/shape-one.png"
-                alt="shape"
-                loading="lazy" />
+            <div class="shape-one">
             </div>
           </div>
           {% endif %}
