--- a/site/_layouts/blog-single.html
+++ b/site/_layouts/blog-single.html
@@ -42,27 +42,27 @@
       <div class="row">
         <div class="col-md-12">
           <div class="blog-section">
-            <h2 class="blog-section-title">Recent Blog</h2>
+            <h2 class="blog-section-title">Recent Posts</h2>
           </div>
         </div>
       </div>
       <div class="row">
-        {% for blog in site.posts reversed limit: 3%}
+        {% for post in site.posts reversed limit: 3%}
         <div class="col-lg-4 col-md-6">
           <article class="blog-post">
             <div class="blog-post-thumb">
-              <a href="{{ blog.url }}">
-                <img src="{{ blog.thumb_img.image }}" alt="{{ blog.thumb_img.image_alt }}" />
+              <a href="{{ post.url }}">
+                <img src="{{ post.thumb_img.image }}" alt="{{ post.thumb_img.image_alt }}" />
               </a>
             </div>
             <div class="blog-post-content">
               <div class="blog-post-tag">
-                {% for tag in blog.tags limit: 2 %}
+                {% for tag in post.tags limit: 2 %}
                 <a href="/tag/{{ tag }}">{{ tag }}</a>
                 {% endfor %}
               </div>
               <div class="blog-post-title">
-                <a href="{{ blog.url }}">{{ blog.title }}</a>
+                <a href="{{ post.url }}">{{ post.title }}</a>
               </div>
             </div>
           </article>
