Fix: extra curly bracket

--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -1,1 +1,1 @@
-{%- include head.html -%} {% bookshop_include page content_blocks=page.content_blocks %}{{{ content }} {%- include tail.html -%}
+{%- include head.html -%} {% bookshop_include page content_blocks=page.content_blocks %} {{ content }} {%- include tail.html -%}
